--- a/online-chat/index.html
+++ b/online-chat/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div class="root" id="root"></div>
+    <script src="./index.js"></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
